k8s/ingress/1-ingress-config.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/proxy-body-size: "100m"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "7200"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "7200"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "7200"
spec:
  rules:
    - http:
        paths:
          # - path: /?(.*)
          #   pathType: Prefix
          #   backend:
          #     service:
          #       name: client
          #       port:
          #         number: 3000
          - path: /api/v1/?(.*)
            pathType: Prefix
            backend:
              service:
                name: auth
                port:
                  number: 3000
